fix element ids, change spacing a bit

--- a/public/css/introduction.css
+++ b/public/css/introduction.css
@@ -37,10 +37,10 @@
     margin-top: 7px;
     display: inline-block;
 }
-#submitIntro {
+#submit-intro {
     float: right;
 }
-#submitIntro span {
+#submit-intro span {
     padding: 5px;
 }
 .message-fade.ng-hide {
@@ -58,8 +58,6 @@
     text-align: center;
     margin-bottom: 15px;
 }
-img {
-    width: 500px;
-    border: 10px solid black;
-    margin-bottom: 10px;
+#begin {
+    margin: 5px 0px;
 }
